[package]
name = "rustml"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustml"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"

[package.metadata.maturin]
name = "rustml"
