[package]
name = "rustml"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustml"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pcap-parser = "0.14"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-preprocessing = "0.7"
ndarray = "0.15"
ndarray-csv = "0.5"
ndarray-stats = "0.5"

[package.metadata.maturin]
name = "rustml"